--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,13 @@
 .app {
     display: flex;
     height: 100vh;
+    background-color: #ffffff;
 }
 
 .chat-list {
-    width: 200px;
-    padding: 10px;
-    border-right: 1px solid #ccc;
+    width: 350px;
+    border-right: 1px solid #d5d5d5;
+    overflow: scroll;
 }
 
 .chat-list ul {
@@ -16,35 +17,201 @@
     margin: 0;
 }
 
+.list{
+    margin-top: 104px;
+}
+
 .chat-list li {
     cursor: pointer;
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 10px 10px 10px 20px;
+    border: solid 1px #d5d5d5;
+    border-right: none;
+    border-top: none;
+    height: 50px;
+}
+
+.chat-list-header{
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: white;
+    border-bottom: 1px solid #d5d5d5;
+}
+
+.chat-list-header div{
+    display: flex;
+
+}
+
+#top{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 155px;
+}
+
+.chat-list-header svg{
+    margin-top: 14px;
+    margin-right: 30px;
+}
+
+.chat-list-search{
+    display: flex;
+    width: 350px;
+    justify-content: center;
+}
+.chat-list-search input{
+    width: 320px;
+    height: 30px;
+    background-color: #d5d5d5;
+    border: none;
     border-radius: 5px;
-    margin-bottom: 5px;
+    margin-bottom: 20px;
+}
+
+.chat-list-search input::placeholder{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 .chat-icon {
     margin-right: 10px;
 }
 
+.window-chat-image-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    margin-right: 8px;
+    padding: 0;
+}
+
+.chat-image-icon {
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+    margin-right: 13px;
+}
+
+.active-chat {
+    background-color: #4c91c7; /* Change to your desired background color */
+    color: #fff; /* Change to your desired text color */
+}
+
 .chat-window {
     flex: 1;
-    padding: 20px;
 }
 
 .chat-header {
+
+    padding: 10px 10px 0 10px;
+    border-bottom: solid 1px #d5d5d5;
     font-size: 1.5rem;
     font-weight: bold;
-    margin-bottom: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.info{
+padding: 0;
+    display: flex;
+    gap: 10px;
+    margin: 0;
+}
+
+.info p{
+    color: #999999;
+    font-size: 14px;
+    margin-top: 0;
+    font-weight: normal;
+}
+
+.user-info{
+    font-weight: normal;
+    margin-top: 0;
+    margin-bottom: 0;
+    font-size: 18px;
+}
+
+.icons{
+    display: flex;
+    gap: 30px;
+    margin-top: 10px;
+    margin-right: 15px
+}
+
+#icon{
+    padding-top: 15px;
+    margin-left: 20px;
+    rotate: 45deg;
+}
+
+.icons-chat{
+    display: flex;
+    gap: 25px;
+    margin-top: 14px;
+    margin-right: 22px
 }
 
 .chat-messages {
-    /* Add styles for chat messages */
+    overflow: auto;
+    padding: 15px 20px;
+    height: 715px;
+    align-items: flex-end;
+    flex-direction: column-reverse;
+    background-image: url("/public/background.png");
+    background-size: cover; /* This property scales the background image to cover the entire container */
+    background-position: center; /* This property centers the background image within the container */
+    background-repeat: no-repeat;
+}
+
+.chat-messages div{
+    justify-content: center;
+    margin-top: 8px;
 }
 
 .empty-chat {
     text-align: center;
     font-style: italic;
+}
+
+.window{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.chat-footer {
+    display: flex;
+    justify-content: space-between;
+    height: 40px;
+}
+
+.chat-footer input{
+    width: 1000px;
+    border: none;
+    margin-top: 15px;
+    outline: none;
+}
+
+.user{
+    margin-left: calc(100% - 320px);
+    font-size: 12px;
+    padding: 5px 10px;
+    border: none;
+    min-height: 20px;
+    max-width: 300px;
+    border-radius: 10px;
+    background-color: #e1ffc7;
+}
+
+.user p{
+    padding-top: 3px;
+    margin: 0;
+    text-align: left;
 }
